fixed login spacing

--- a/server/public/assets/styles/style.css
+++ b/server/public/assets/styles/style.css
@@ -16,7 +16,7 @@ main {
 }
 
 footer {
-    margin-top: 25px;
+    margin-top: 10px;
     color: #555;
     text-align: center;
 }
@@ -41,7 +41,7 @@ section {
     margin-right: auto;
     color: #555;
     font-size: 20px;
-    margin-top: 50px;
+    margin-top: 5px;
     text-align: center;
 }
 
